--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@fontsource/poppins": "4.5.10",
+    "@fontsource/quicksand": "^4.5.12",
     "@multiversx/sdk-core": "11.4.1",
     "@useelven/core": "0.1.0",
+    "aos": "^3.0.0-beta.6",
     "bignumber.js": "9.1.1",
     "crypto-browserify": "3.12.0",
     "next": "13.2.3",
@@ -32,12 +34,14 @@
     "qrcode": "1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.8.0",
+    "react-icons": "^4.8.0",
     "react-social-icons": "5.15.0",
+    "sass": "^1.60.0",
     "stream-browserify": "3.0.0",
     "swr": "2.0.4"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/node": "18.14.6",
     "@types/qrcode": "1.5.0",
     "@types/react": "18.0.28",
