--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "aos": "^3.0.0-beta.6",
     "bignumber.js": "9.1.1",
     "crypto-browserify": "3.12.0",
+    "framer-motion": "^10.11.6",
     "next": "13.2.3",
     "path-browserify": "1.0.1",
     "process": "0.11.10",
